--- a/packages/Keyguard/AndroidManifest.xml
+++ b/packages/Keyguard/AndroidManifest.xml
@@ -18,7 +18,7 @@
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.android.keyguard"
-    android:sharedUserId="android.uid.system"
+    android:sharedUserId="android.uid.systemui"
     coreApp="true">
     <uses-sdk android:minSdkVersion="10" android:targetSdkVersion="17"/>
     <uses-permission android:name="android.permission.VIBRATE" />
@@ -49,6 +49,8 @@
         <service android:name=".KeyguardService"
             android:exported="true" />
 
+    </application>
+
     <service android:name="com.android.keyguard.NotificationListenerWrapper"
              android:label="@string/app_name"
              android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE">
@@ -57,5 +59,4 @@
         </intent-filter>
     </service>
 
-    </application>
 </manifest>
